- Added 'send' functionality to the original 'listener' code, to allow sending of commands to the evohome controller - Changed name to evogateway (from evolistener)

--- a/multitail.conf
+++ b/multitail.conf
@@ -151,7 +151,7 @@ cs_re:red: (failed|error|Error)
 cs_re:green: (Loading model|Started|Restore\ Values|has\ been\ started|Added\ new\ thing)
 scheme:openhab:/opt/openhab/userdata/logs
 #
-# Evolistener
+# Evolistener/evoGateway
 colorscheme:evolistener
 cs_re:blue:.*TEMPERATURE.*
 cs_re:red,,bold:.*\-\-\- Message dropped.*
@@ -159,7 +159,7 @@ cs_re:yellow,,bold:.*ZONE_HEAT_DEMAND.*
 cs_re:yellow,red,bold:.*RELAY_HEAT_DEMAND.*
 cs_re:cyan:.*SETPOINT.*
 
-scheme:evolistener:/opt/_scripts/evohome/listener
+scheme:evolistener:/opt/_scripts/evohome/gateway
 
 #
 # Zarafa
