Update references to evogateway

--- a/evogateway.cfg
+++ b/evogateway.cfg
@@ -1,5 +1,5 @@
 [Serial Port]
-COM_PORT         = /dev/evolistener
+COM_PORT         = /dev/evogateway
 COM_BAUD         = 115200
 COM_RETRY_LIMIT  = 10
 
@@ -15,12 +15,12 @@ MQTT_SUB_TOPIC      = evohome/gateway/command
 MQTT_SERVER      = 172.16.2.8
 MQTT_USER        = openhab
 MQTT_PW          = xxxx
-MQTT_CLIENTID    = evoGatewayr
+MQTT_CLIENTID    = evoGateway
 
 [SENDER]
 # Only tested with gateway_id's with device type 30:071715. Device ID seems to matter. Tried 30:99999 and had incorrect reply address etc.
 THIS_GATEWAY_ID     = 30:071715
-THIS_GATEWAY_NAME   = evoGateway
+THIS_GATEWAY_NAME   = EvoGateway
 
 [MISC]
 LOG_DROPPED_PACKETS = False
