--- a/multitail.conf
+++ b/multitail.conf
@@ -160,7 +160,7 @@ cs_re:yellow,red,bold:.*RELAY_HEAT_DEMAND.*
 cs_re:cyan:.*SETPOINT.*
 
 scheme:evolistener:/opt/_scripts/evohome/gateway
-
+scheme:evolistener:/opt/_scripts/evohome/listener
 #
 # Zarafa
 colorscheme:zarafa:www.zarafa.com
