Auto retry for failed sends. Post send status to MQTT. Update README with latest changes.

--- a/evogateway.cfg
+++ b/evogateway.cfg
@@ -21,6 +21,9 @@ MQTT_CLIENTID    = evoGateway
 # Only tested with gateway_id's with device type 30:071715. Device ID seems to matter. Tried 30:99999 and had incorrect reply address etc.
 THIS_GATEWAY_ID     = 30:071715
 THIS_GATEWAY_NAME   = EvoGateway
+COMMAND_RESEND_TIMEOUT_SECS = 30
+COMMAND_RESEND_ATTEMPTS= 5
+
 
 [MISC]
 LOG_DROPPED_PACKETS = False
