--- a/multitail.conf
+++ b/multitail.conf
@@ -151,16 +151,47 @@ cs_re:red: (failed|error|Error)
 cs_re:green: (Loading model|Started|Restore\ Values|has\ been\ started|Added\ new\ thing)
 scheme:openhab:/opt/openhab/userdata/logs
 #
-# Evolistener/evoGateway
+# evoWebScheduler
+colorscheme:evoScheduler
+cs_re:red,,bold:(error|Unauthorized)
+cs_re:blue,,bold:debug
+cs_re:white,,bold:silly
+cs_re:green,,bold:info
+# IP address (with port)
+cs_re:yellow:[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}(:[0-9]{1,5})+
+# functions
+cs_re:green,,bold: (\/\w+(:|\ ))
+
+#In brackets
+cs_re:magenta: (\[.*\])
+cs_re:yellow: (\{.*\})
+
+# {} brackets
+cs_re:green,,bold: (\{|\})
+scheme:evoScheduler:/opt/scripts/evohome/evoScheduler/logs
+
+# Date (8 is ANSI for grey)
+cs_re_s:blue:([0-9]{4}-[0-9]{2}-[0-9]{2}T)
+#Time
+cs_re_s:yellow:([0-9]{2}:[0-9]{2}:[0-9]{2})
+# Numbers
+cs_re:magenta:(\b|-)([0-9]{1,})(\.[0-9]*)?\b
+
+
+#
+# Evolistener
 colorscheme:evolistener
+cs_re:green:.*_SYSTEM_.*
+cs_re:green:.*\*.*
 cs_re:blue:.*TEMPERATURE.*
 cs_re:red,,bold:.*\-\-\- Message dropped.*
 cs_re:yellow,,bold:.*ZONE_HEAT_DEMAND.*
 cs_re:yellow,red,bold:.*RELAY_HEAT_DEMAND.*
 cs_re:cyan:.*SETPOINT.*
+cs_re:yellow,blue,bold:.*COMMAND_OUT.*
 
-scheme:evolistener:/opt/_scripts/evohome/gateway
-scheme:evolistener:/opt/_scripts/evohome/listener
+scheme:evolistener:/opt/scripts/evohome/listener
+
 #
 # Zarafa
 colorscheme:zarafa:www.zarafa.com
