--- a/multitail.conf
+++ b/multitail.conf
@@ -179,16 +179,19 @@ cs_re:magenta:(\b|-)([0-9]{1,})(\.[0-9]*)?\b
 
 
 #
-# Evolistener
+# evolistener
 colorscheme:evolistener
-cs_re:green:.*_SYSTEM_.*
-cs_re:green:.*\*.*
-cs_re:blue:.*TEMPERATURE.*
-cs_re:red,,bold:.*\-\-\- Message dropped.*
-cs_re:yellow,,bold:.*ZONE_HEAT_DEMAND.*
-cs_re:yellow,red,bold:.*RELAY_HEAT_DEMAND.*
-cs_re:cyan:.*SETPOINT.*
-cs_re:yellow,blue,bold:.*COMMAND_OUT.*
+cs_re:green,red:.*_SYSTEM_.*
+cs_re:green,,bold:.*(MQTT|COMMAND).*
+#cs_re:green:.*RP.*
+cs_re:black,white,bold:.*COMMAND.*ERROR.*
+cs_re:white,,bold:.*opentherm_msg.*
+cs_re:red,,bold:.*\|\stemperature.*
+cs_re:yellow:.*\_demand.*
+cs_re:blue,,bold:.*actuator_state.*
+cs_re:cyan,,bold:.*setpoint.*
+cs_re:yellow,,bold:.*(dhw_temp|dhw_mode).*
+
 
 scheme:evolistener:/opt/scripts/evohome/listener
 
