--- a/evogateway.cfg.sample
+++ b/evogateway.cfg.sample
@@ -1,34 +1,45 @@
 [Serial Port]
-COM_PORT         = /dev/evogateway
+# Port is required
+COM_PORT         = /dev/ttyUSB0
 
+# optional
+COM_BAUD         = 115200
 
+# Optional
 [Files]
-EVENTS_FILE      = events.log
-LOG_FILE         = evogateway.log
-DEVICES_FILE     = devices.json
-NEW_DEVICES_FILE = devices_new.json   
-SCHEMA_FILE                 = schema.json
+EVENTS_FILE                 = events.log
+PACKET_LOG_FILE             = packet.log
+DEVICES_FILE                = devices.json
+SCHEMA_FILE                 = ramses_rf_schema.json
+LOAD_ZONES_FROM_FILE        = True
+MAX_SAVE_FILE_COUNT         = 9
 
 [MQTT]
-MQTT_PUB_TOPIC   = evohome/gateway
-MQTT_SUB_TOPIC   = evohome/gateway/command
-MQTT_SERVER      = 172.16.2.8
-MQTT_USER        = openhab
-MQTT_PW          = xxxx
-MQTT_CLIENTID    = evoGateway
+# Required
+MQTT_SERVER                 = 172.16.2.1
+MQTT_USER                   = <user>
+MQTT_PW                     = <password>
 
-[SENDER]
-THIS_GATEWAY_NAME           = EvoGateway
-CONTROLLER_ID               = 01:xxxxxx
-GATEWAY_DISABLE_SENDING     = False
+# Optional
+MQTT_PUB_TOPIC              = evohome/evogateway
+MQTT_SUB_TOPIC              = evohome/evogateway/_zone_independent/command
 
-# Try to match an acknowledgement from Controller for outbound commands (unless overridden via individual command json with 'wait_for_ack') 
-COMMAND_RESEND_TIMEOUT_SECS = 10
-COMMAND_RESEND_ATTEMPTS     = 2
+#Publish as a json string. If False, the key/values of the json will be published individually
+MQTT_PUB_AS_JSON            = False
+
+# Either group messages by zone name (default), otherwise by device name
+MQTT_GROUP_BY_ZONE          = True
 
 
 [MISC]
+THIS_GATEWAY_NAME           = evoGateway
+
 # Display full json string from evohome_rf, or just key data item for each row 
 DISPLAY_FULL_JSON            = False
-MAX_LOG_HISTORY             = 10
+
+# SCHEMA_EAVESDROP            = False
+
+# Assumes that there is only a single HGI device on the network (in case of spurious HGI device addresses)
+FORCE_SINGLE_HGI            = True
+
 
