--- a/multitail.conf
+++ b/multitail.conf
@@ -179,8 +179,8 @@ cs_re:magenta:(\b|-)([0-9]{1,})(\.[0-9]*)?\b
 
 
 #
-# evolistener
-colorscheme:evolistener
+# evogateway
+colorscheme:evogateway
 cs_re:green,red:.*_SYSTEM_.*
 cs_re:green,,bold:.*(MQTT|COMMAND).*
 #cs_re:green:.*RP.*
