--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 colorama==0.4.3
-ramses_rf==0.18.6
-paho_mqtt==1.6.1
+colorlog==6.7.0
+paho-mqtt==1.6.1
+pyserial==3.5
+pyserial-asyncio==0.6
+ramses-rf==0.22.40
+voluptuous==0.13.1
